--- a/views/index.html
+++ b/views/index.html
@@ -37,29 +37,29 @@
         <div class="col-md-8">
           <ul class="nav nav-pills">
             <li class="nav-item">
-              <a class="nav-link active" data-type="shirt">Áo</a>
+              <a class="nav-link active" href="#" data-type="shirt">Áo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-type="pants">Quần</a>
+              <a class="nav-link" href="#" data-type="pants">Quần</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-type="shoes">Giày Dép</a>
+              <a class="nav-link" href="#" data-type="shoes">Giày Dép</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-type="handbags">Túi Xách</a>
+              <a class="nav-link" href="#" data-type="handbags">Túi Xách</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-type="necklaces">Dây Chuyền</a>
+              <a class="nav-link" href="#" data-type="necklaces">Dây Chuyền</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-type="hairstyles">Kiểu Tóc</a>
+              <a class="nav-link" href="#" data-type="hairstyles">Kiểu Tóc</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-type="backgrounds">Nền</a>
+              <a class="nav-link" href="#" data-type="backgrounds">Nền</a>
             </li>
           </ul>
+
           <div class="well">
-            <!-- Tab panes -->
             <div class="tab-content">
               <div class="tab-pane active" id="item-container"></div>
             </div>
