--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 .card.hovercard {
   position: relative;
   padding-top: 0;
@@ -40,6 +41,7 @@
   margin: 0 auto;
   position: relative;
 }
+
 .body {
   width: 250px;
   height: 500px;
@@ -48,6 +50,7 @@
   top: 12%;
   left: 22%;
 }
+
 .bikinitop {
   width: 250px;
   height: 500px;
@@ -56,6 +59,32 @@
   top: 12%;
   left: 22%;
   z-index: 1;
+}
+
+.topclothes {
+  width: 100%;
+  height: 510px;
+  /* Chiều cao tự động, giữ tỷ lệ khung hình */
+  background: no-repeat center center;
+  background-size: contain;
+  /* Đảm bảo hình ảnh không bị cắt, giữ nguyên toàn bộ */
+  position: absolute;
+  top: 12%;
+  left: -1%;
+  z-index: 3;
+}
+
+.botclothes {
+  width: 100%;
+  height: 510px;
+  /* Chiều cao tự động, giữ tỷ lệ khung hình */
+  background: no-repeat center center;
+  background-size: contain;
+  /* Đảm bảo hình ảnh không bị cắt, giữ nguyên toàn bộ */
+  position: absolute;
+  top: 12%;
+  left: -1%;
+  z-index: 3;
 }
 
 .bikinibottom {
@@ -78,7 +107,7 @@
   z-index: 1;
 }
 
-.handbag {
+.handbags {
   width: 500px;
   height: 1000px;
   position: absolute;
@@ -88,14 +117,14 @@
   z-index: 4;
 }
 
-.necklace {
+.necklaces {
   width: 500px;
   height: 1000px;
   position: absolute;
   bottom: -40%;
   right: -3.5%;
   transform: scale(0.5);
-  z-index: 4;
+  z-index: 10;
 }
 
 .hairstyle {
@@ -108,7 +137,7 @@
   z-index: 4;
 }
 
-.feet {
+.shoes {
   width: 500px;
   height: 1000px;
   background: url("./../images/shoes/shoes1.png");
@@ -144,17 +173,51 @@ hr {
   width: 140px;
   text-align: center;
 }
+
 .nav-pills .nav-item .nav-link {
   border: 1px solid #ccc;
   border-radius: 0 !important;
 }
+
 .well {
   background-color: #eff1f1;
   height: 700px;
   width: 100%;
+  /* overflow: hidden; Ngăn không cho nội dung tràn ra ngoài */
 }
 
 .card {
   border: none;
   padding-top: 30px;
+}
+
+/**/
+
+.container {
+  margin-top: 20px;
+}
+
+.nav-pills .nav-link {
+  margin-right: 5px;
+}
+
+.tab-content2 {
+  margin-top: 20px;
+}
+
+.card {
+  margin-bottom: 20px;
+}
+
+.model-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  background-size: cover;
+  background-position: center;
+}
+
+.model-container img {
+  max-height: 100%;
 }
